--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ROTO – Shield Pack</title>
+  <link rel="stylesheet" href="assets/styles.css">
+</head>
+<body>
+
 <header>
   <h1>ROTO – Shield Pack</h1>
-  <p>Ottoman-era shield textures & tweaks for your adventure.</p>
+  <p>Epic Knights shield tweaks.</p>
 </header>
 
 <main>
@@ -30,3 +40,6 @@
 <footer>
   © ROTO Project • Need help? Join the Discord.
 </footer>
+
+</body>
+</html>
