--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 <header>
   <h1>ROTO – Shield Pack</h1>
   <p>Epic Knights shield tweaks.</p>
+  <!-- Hero Banner -->
+  <img src="background.png" alt="ROTO Shield Pack banner" class="hero">
 </header>
 
 <main>
   <!-- One card for the pack -->
   <section class="item">
-    <img src="background.png" alt="ROTO Shield Pack preview">
+    <img src="shield.png" alt="ROTO Shield Pack preview">
     <div class="item-content">
       <h2>ROTO Shield Pack v1.0</h2>
-      <p>Custom pavise & heater shields with lowered view obstruction, refined metals, and warmer wood tones. Compatible with 1.20.1 (Forge).</p>
+      <p>Lowered shield models for improved visibility.</p>
 
       <div class="download">
         <a class="btn" href="ROTO-Shields-v1.0.zip" download>
