--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ROTO – Shield Pack</title>
+  <title>Rise of the Ottomans — Add-ons</title>
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
 
 <header>
-  <h1>ROTO – Shield Pack</h1>
-  <p>Epic Knights shield tweaks.</p>
-  <!-- Hero Banner -->
-  <img src="background.png" alt="ROTO Shield Pack banner" class="hero">
+  <h1>Rise of the Ottomans — Add-ons</h1>
+  <p>Community add-ons and resources.</p>
+  <!-- Hero Banner (1024x1024 works; CSS will crop nicely) -->
+  <img src="background.png" alt="ROTO banner" class="hero">
 </header>
 
 <main>
   <!-- One card for the pack -->
   <section class="item">
-    <img src="shield.png" alt="ROTO Shield Pack preview">
+    <img src="shield.png" alt="Shield Pack preview">
     <div class="item-content">
-      <h2>ROTO Shield Pack v1.0</h2>
-      <p>Lowered shield models for improved visibility.</p>
+      <h2>Shield Pack v1.0</h2>
+      <p>Shields adjusted to block less of the screen.</p>
 
       <div class="download">
         <a class="btn" href="ROTO-Shields-v1.0.zip" download>
@@ -31,9 +31,6 @@
           </svg>
           Download Pack
         </a>
-        <span class="meta">• 12.4 MB • Updated Sep 4, 2025</span>
-        &nbsp; · &nbsp;
-        <a class="link" href="downloads/ROTO-Shields.zip">Mirror</a>
       </div>
     </div>
   </section>
