--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   <h1>Rise of the Ottomans — Add-ons</h1>
   <p>Community add-ons and resources.</p>
   <!-- Hero Banner (1024x1024 works; CSS will crop nicely) -->
-  <img src="background.png" alt="ROTO banner" class="hero">
+  <img src="assets/background.png" alt="ROTO banner" class="hero">
 </header>
 
 <main>
   <!-- One card for the pack -->
   <section class="item">
-    <img src="shield.png" alt="Shield Pack preview">
+    <img src="assets/shield.png" alt="Shield Pack preview">
     <div class="item-content">
       <h2>Shield Pack v1.0</h2>
       <p>Shields adjusted to block less of the screen.</p>
