--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rise of the Ottomans — Add-ons</title>
   <link rel="stylesheet" href="assets/styles.css">
+  <link rel="icon" type="image/png" href="assets/background.png">
 </head>
 <body>
 
@@ -21,7 +22,7 @@
     <img src="assets/shield.png" alt="Shield Pack preview">
     <div class="item-content">
       <h2>Shield Pack v1.0</h2>
-      <p>Shields adjusted to block less of the screen.</p>
+      <p>Lowered shield models for improved visibility.</p>
 
       <div class="download">
         <a class="btn" href="ROTO-Shields-v1.0.zip" download>
