--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rise of the Ottomans — Add-ons</title>
-  <link rel="stylesheet" href="assets/styles.css">
-  <link rel="icon" type="image/png" href="assets/background.png">
+  <link rel="stylesheet" href="assets/styles.css" />
+  <!-- Favicons: use a small 32x32 icon if you add one later -->
+  <!-- <link rel="icon" type="image/png" href="assets/favicon.png"> -->
 </head>
 <body>
 
 <header>
   <h1>Rise of the Ottomans — Add-ons</h1>
   <p>Community add-ons and resources.</p>
-  <!-- Hero Banner (1024x1024 works; CSS will crop nicely) -->
+  <!-- Show full 1024x1024 image without cropping -->
   <img src="assets/background.png" alt="ROTO banner" class="hero">
 </header>
 
 <main>
-  <!-- One card for the pack -->
+  <!-- Shield pack card -->
   <section class="item">
     <img src="assets/shield.png" alt="Shield Pack preview">
     <div class="item-content">
       <h2>Shield Pack v1.0</h2>
-      <p>Lowered shield models for improved visibility.</p>
 
-      <div class="download">
+      <!-- description (left) + button (right) -->
+      <div class="download-row">
+        <p>Lowered shield models for improved visibility.</p>
+
         <a class="btn" href="ROTO-Shields-v1.0.zip" download>
           <!-- download icon -->
-          <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <svg viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" width="18" height="18">
             <path d="M12 3a1 1 0 0 1 1 1v8.586l2.293-2.293a1 1 0 1 1 1.414 1.414l-4.007 4.007a1.25 1.25 0 0 1-1.4.241l-.173-.1-4.007-4.148a1 1 0 1 1 1.428-1.398L11 12.586V4a1 1 0 0 1 1-1zM5 18a1 1 0 0 0 0 2h14a1 1 0 1 0 0-2H5z"/>
           </svg>
           Download Pack
